Экран и шапка без адаптива

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -9,11 +9,11 @@
     },
     {
       "path": "sass/style.sass",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_fonts.scss",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_grid.sass",
@@ -21,7 +21,7 @@
     },
     {
       "path": "sass/_interface.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
@@ -46,13 +46,15 @@
       "imports": [
         "sass/_grid.sass",
         "sass/_fonts.scss",
+        "sass/_colors.sass",
         "sass/_interface.sass",
-        "sass/blocks/_navbar.sass"
+        "sass/blocks/_navbar.sass",
+        "sass/blocks/_hero.sass"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "ftp"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -162,8 +164,8 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"sourceMap\":true,\"output\":{\"replaceSegmentsWith\":\"./css\"},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}",
-  "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegmentsWith\":\"./css\"},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"ruby-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"sourceMap\":true,\"output\":{\"replaceSegmentsWith\":\"./css\"},\"compiler-ruby-sass\":{\"lineNumbers\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}",
+  "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"output\":{\"replaceSegmentsWith\":\"./css\"},\"outputSuffix\":null}",
   "autoprefixer": {
     "browsers": "last 5 versions"
   },
