--- a/prepros-6.config
+++ b/prepros-6.config
@@ -9,19 +9,27 @@
     },
     {
       "path": "sass/style.sass",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_fonts.scss",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_grid.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_interface.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+    },
+    {
+      "path": "sass/_colors.sass",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+    },
+    {
+      "path": "sass/_fonts.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
@@ -45,16 +53,16 @@
       "path": "sass/style.sass",
       "imports": [
         "sass/_grid.sass",
-        "sass/_fonts.scss",
         "sass/_colors.sass",
         "sass/_interface.sass",
         "sass/blocks/_navbar.sass",
-        "sass/blocks/_hero.sass"
+        "sass/blocks/_hero.sass",
+        "sass/blocks/offer.sass"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -164,13 +172,13 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"ruby-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"sourceMap\":true,\"output\":{\"replaceSegmentsWith\":\"./css\"},\"compiler-ruby-sass\":{\"lineNumbers\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"ruby-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"sourceMap\":true,\"output\":{\"replaceSegmentsWith\":\"./css\"},\"compiler-ruby-sass\":{\"outputStyle\":\"expanded\",\"lineNumbers\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"output\":{\"replaceSegmentsWith\":\"./css\"},\"outputSuffix\":null}",
   "autoprefixer": {
     "browsers": "last 5 versions"
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
-  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"outputSuffix\":\"\"}",
+  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\"},\"outputSuffix\":\"\",\"compiler-minify-css\":{\"enabled\":false}}",
   "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegmentsWith\":\"../js\"},\"outputSuffix\":\"\"}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-markdown": "{\"compilers\":[\"markdown\"]}",
