Сверстан блок с преимуществами. Сделан адаптив.

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -9,7 +9,7 @@
     },
     {
       "path": "sass/style.sass",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_fonts.scss",
@@ -17,23 +17,31 @@
     },
     {
       "path": "sass/_grid.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_interface.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_colors.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_fonts.sass",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+    },
+    {
+      "path": "sass/blocks/_features.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"sass/style.sass.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
+      "css",
+      "dist",
+      "dist/css",
+      "sass/blocks",
       "sass"
     ],
     "hideSystemFiles": true,
@@ -53,16 +61,18 @@
       "path": "sass/style.sass",
       "imports": [
         "sass/_grid.sass",
+        "sass/_fonts.sass",
         "sass/_colors.sass",
         "sass/_interface.sass",
         "sass/blocks/_navbar.sass",
         "sass/blocks/_hero.sass",
-        "sass/blocks/offer.sass"
+        "sass/blocks/offer.sass",
+        "sass/blocks/_features.sass"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
