Блок со статьями и каталог, адаптированы

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,7 +25,7 @@
     },
     {
       "path": "sass/_colors.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_fonts.sass",
@@ -34,15 +34,19 @@
     {
       "path": "sass/blocks/_features.sass",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"sass/style.sass.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+    },
+    {
+      "path": "sass/blocks/_blog-list.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
+      "css/blocks",
       "css",
-      "dist",
       "dist/css",
-      "sass/blocks",
-      "sass"
+      "sass",
+      "sass/blocks"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -67,7 +71,9 @@
         "sass/blocks/_navbar.sass",
         "sass/blocks/_hero.sass",
         "sass/blocks/offer.sass",
-        "sass/blocks/_features.sass"
+        "sass/blocks/_features.sass",
+        "sass/blocks/_catalog.sass",
+        "sass/blocks/_blog-list.sass"
       ]
     }
   ],
@@ -182,7 +188,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"ruby-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"sourceMap\":true,\"output\":{\"replaceSegmentsWith\":\"./css\"},\"compiler-ruby-sass\":{\"outputStyle\":\"expanded\",\"lineNumbers\":true},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"ruby-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"output\":{\"replaceSegmentsWith\":\"./css\"},\"compiler-ruby-sass\":{\"outputStyle\":\"expanded\"},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"output\":{\"replaceSegmentsWith\":\"./css\"},\"outputSuffix\":null}",
   "autoprefixer": {
     "browsers": "last 5 versions"
