Добавлен блок с ценами, плюс адаптив

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -73,7 +73,8 @@
         "sass/blocks/offer.sass",
         "sass/blocks/_features.sass",
         "sass/blocks/_catalog.sass",
-        "sass/blocks/_blog-list.sass"
+        "sass/blocks/_blog-list.sass",
+        "sass/blocks/_price.sass"
       ]
     }
   ],
