--- a/prepros-6.config
+++ b/prepros-6.config
@@ -70,11 +70,12 @@
         "sass/_interface.sass",
         "sass/blocks/_navbar.sass",
         "sass/blocks/_hero.sass",
-        "sass/blocks/offer.sass",
+        "sass/blocks/_offer.sass",
         "sass/blocks/_features.sass",
         "sass/blocks/_catalog.sass",
         "sass/blocks/_blog-list.sass",
-        "sass/blocks/_price.sass"
+        "sass/blocks/_price.sass",
+        "sass/blocks/_steps.sass"
       ]
     }
   ],
