Блок отзывов без адаптива, форма связи с адаптивом, блок о производстве

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,7 +25,7 @@
     },
     {
       "path": "sass/_colors.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"sass/style.sass.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
     },
     {
       "path": "sass/_fonts.sass",
@@ -75,12 +75,14 @@
         "sass/blocks/_catalog.sass",
         "sass/blocks/_blog-list.sass",
         "sass/blocks/_price.sass",
-        "sass/blocks/_steps.sass"
+        "sass/blocks/_steps.sass",
+        "sass/blocks/_reviews.sass",
+        "sass/blocks/_factory.sass"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
