--- a/prepros-6.config
+++ b/prepros-6.config
@@ -77,12 +77,13 @@
         "sass/blocks/_price.sass",
         "sass/blocks/_steps.sass",
         "sass/blocks/_reviews.sass",
-        "sass/blocks/_factory.sass"
+        "sass/blocks/_factory.sass",
+        "sass/blocks/_contacts.sass"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
