--- a/prepros-6.config
+++ b/prepros-6.config
@@ -78,7 +78,9 @@
         "sass/blocks/_steps.sass",
         "sass/blocks/_reviews.sass",
         "sass/blocks/_factory.sass",
-        "sass/blocks/_contacts.sass"
+        "sass/blocks/_contacts.sass",
+        "sass/blocks/_questions.sass",
+        "sass/blocks/_footer.sass"
       ]
     }
   ],
