--- a/prepros-6.config
+++ b/prepros-6.config
@@ -67,6 +67,7 @@
         "sass/_grid.sass",
         "sass/_fonts.sass",
         "sass/_colors.sass",
+        "sass/_slick.scss",
         "sass/_interface.sass",
         "sass/blocks/_navbar.sass",
         "sass/blocks/_hero.sass",
@@ -76,6 +77,7 @@
         "sass/blocks/_blog-list.sass",
         "sass/blocks/_price.sass",
         "sass/blocks/_steps.sass",
+        "sass/blocks/_before.sass",
         "sass/blocks/_reviews.sass",
         "sass/blocks/_factory.sass",
         "sass/blocks/_contacts.sass",
