--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,6 +38,22 @@
     {
       "path": "sass/blocks/_blog-list.sass",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"outputSuffix\":null}"
+    },
+    {
+      "path": "js/jquery.event.move.js",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"\"}"
+    },
+    {
+      "path": "js/jquery.twentytwenty.js",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"\"}"
+    },
+    {
+      "path": "js/main.js",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"\"}"
+    },
+    {
+      "path": "js/slick.min.js",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"\"}"
     }
   ],
   "fileTree": {
@@ -46,7 +62,8 @@
       "css",
       "dist/css",
       "sass",
-      "sass/blocks"
+      "sass/blocks",
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -87,7 +104,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -204,7 +221,7 @@
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
   "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\"},\"outputSuffix\":\"\",\"compiler-minify-css\":{\"enabled\":false}}",
-  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegmentsWith\":\"../js\"},\"outputSuffix\":\"\"}",
+  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"replaceSegmentsWith\":\"../js\"},\"outputSuffix\":\"\"}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-markdown": "{\"compilers\":[\"markdown\"]}",
   "file-type-haml": "{\"compilers\":[\"haml\"]}",
